// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectionStateMessage Render should display the connection when isOnline is false and the application is synced false 1`] = `
<IntlProvider
  defaultFormats={Object {}}
  defaultLocale="en"
  formats={Object {}}
  locale="en-US"
  messages={Object {}}
  onError={[Function]}
  textComponent={Symbol(react.fragment)}
  timeZone="Asia/Kuala_Lumpur"
>
  <Memo(ConnectionStateMessage)
    isOnline={false}
    isSynced={false}
  >
    <FormattedMessage
      defaultMessage="Disconnected"
      id="notonline"
    >
      Disconnected
    </FormattedMessage>
  </Memo(ConnectionStateMessage)>
</IntlProvider>
`;

exports[`ConnectionStateMessage Render should display the connection when isOnline is false and the application is synced true 1`] = `
<IntlProvider
  defaultFormats={Object {}}
  defaultLocale="en"
  formats={Object {}}
  locale="en-US"
  messages={Object {}}
  onError={[Function]}
  textComponent={Symbol(react.fragment)}
  timeZone="Asia/Kuala_Lumpur"
>
  <Memo(ConnectionStateMessage)
    isOnline={false}
    isSynced={true}
  >
    <FormattedMessage
      defaultMessage="Disconnected"
      id="notonline"
    >
      Disconnected
    </FormattedMessage>
  </Memo(ConnectionStateMessage)>
</IntlProvider>
`;

exports[`ConnectionStateMessage Render should display the connection when isOnline is true and the application is synced false 1`] = `
<IntlProvider
  defaultFormats={Object {}}
  defaultLocale="en"
  formats={Object {}}
  locale="en-US"
  messages={Object {}}
  onError={[Function]}
  textComponent={Symbol(react.fragment)}
  timeZone="Asia/Kuala_Lumpur"
>
  <Memo(ConnectionStateMessage)
    isOnline={true}
    isSynced={false}
  >
    <FormattedMessage
      defaultMessage="Synchronize"
      id="syncAction"
    >
      Synchronize
    </FormattedMessage>
  </Memo(ConnectionStateMessage)>
</IntlProvider>
`;

exports[`ConnectionStateMessage Render should display the connection when isOnline is true and the application is synced true 1`] = `
<IntlProvider
  defaultFormats={Object {}}
  defaultLocale="en"
  formats={Object {}}
  locale="en-US"
  messages={Object {}}
  onError={[Function]}
  textComponent={Symbol(react.fragment)}
  timeZone="Asia/Kuala_Lumpur"
>
  <Memo(ConnectionStateMessage)
    isOnline={true}
    isSynced={true}
  >
    <FormattedMessage
      defaultMessage="Online"
      id="online"
    >
      Online
    </FormattedMessage>
  </Memo(ConnectionStateMessage)>
</IntlProvider>
`;
